--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
+<!--mvn clean install; java -jar .\target\restful-0.0.1-SNAPSHOT.jar-->
 <html>
 <head>
-    <title>Game High Scores</title>
-    <!-- Include FontAwesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Include modeswitch CSS from local file -->
+    <title>Centerstage (FTC 2023-2024)</title>
     <style>
         canvas {
         background-color: rgb(188, 164, 210);
@@ -12,39 +10,24 @@
     </style>
 </head>
 <body>
-    <h1>Game High Scores</h1>
+    <h1>Centerstage (FTC 2023-2024)</h1>
 
     <form id="modeForm">
         <label>
-            <input type="radio" name="gameMode" value="Pathmaker" checked>
+            <input type="radio" name="gameMode" value="Pathmaker">
             One-Player Mode (Pathmaker Test)
         </label>
         <label>
-            <input type="radio" name="gameMode" value="multiPlayer">
+            <input type="radio" name="gameMode" value="multiPlayer" checked>
             Multiplayer Mode (without Pathmaker)
         </label>
     </form>
 
-    <!-- Form to Add High Score -->
-    <form id="highScoreForm">
-        <label for="playerName">Player Name:</label>
-        <input type="text" id="playerName" required>
-        <br>
-        <label for="score">Score:</label>
-        <input type="number" id="score" required>
-        <br>
-        <button type="submit">Submit High Score</button>
-    </form>
 
     <script src="chart.js/dist/chart.umd.js"></script>
     <!-- Button to Open Charts -->
     <button id="openChartsButton">Open Charts</button>
 
-    <!-- Display High Scores -->
-    <h2>High Scores</h2>
-    <ul id="highScoresList">
-        <!-- High scores will be displayed here -->
-    </ul>
     <canvas id="gameCanvas" width="1200" height="1200"></canvas>
     <script src="index.js" defer> </script>
 
